--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&family=Roboto&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="images/MA.png" type="image/x-icon">
     <title>Mujahidul Amin</title>
 </head>
+
 <body>
-    
+    <section class="bg">
+        <div class="header-bg">
+            <div class="half-width">
+                <h1>Welcome To</h1>
+                <h1><span class="orange-color">Mujahidul Amin</span> World!</h1>
+                <h2>Build Climber and Train Stopper</h2>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                    Development Hero.</p>
+                    <a href="#">Hire me</a>
+            </div>
+            <div class="half-width">
+                <img src="images/my-bg.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
