--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
                 <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                     work. That's why I am learning and mastering web development. I will not stop until I become the Web
                     Development Hero.</p>
-                    <a href="#">Hire me</a>
+                <a href="#">Hire me</a>
             </div>
             <div class="half-width">
                 <img src="images/my-bg.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="middle">
+        <div class="header-bg">
+            <div class="half-width">
+                <img src="images/my-bg3.png" alt="" class="middle-img">
+            </div>
+            <div class="half-width">
+                <h1>Dream Big</h1>
+                <h2>Become a web developer</h2>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                    how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                    <a href="">DOWNLOAD RESUME</a>
             </div>
         </div>
     </section>
